# Soar-Smart-Roadside-Infrastructure-System

./: README.md
communication/I2V/: .gitignore  CMakeLists.txt  README.md  gps.py  libroad_rx.cpp  libroad_tx.cpp  libroad_tx_demo.cpp  monitor_mode.sh
communication/I2V/8814au/: 8814au.conf  dkms.conf  edit-options.sh
communication/I2V/8814au/core/: rtw_mlme_ext.c  rtw_recv.c  rtw_xmit.c
communication/I2V/8814au/hal/: hal_com.c  hal_intf.c
communication/I2V/include/: DivTable_O8.h  FiniteField.h  LDPC.h  MulTable_O8.h  RandGenerator.h  config.h  utils.h  v2x_receiver.h  v2x_sender.h  v2x_socket.h
communication/I2V/livox_sdk/: CMakeLists.txt
communication/I2V/result/: coding_plot.py  multicar_plot.py  multicar_result.csv  requirements.txt
communication/I2V/result/coding_data/coding_our_10/: result.csv  test.txt
communication/I2V/result/coding_data/coding_our_10_2/: result.csv  test.txt
communication/I2V/result/coding_data/coding_our_20/: result.csv  test.txt
communication/I2V/result/coding_data/coding_our_30/: result.csv  test.txt
communication/I2V/result/coding_data/coding_ourcode_10/: result.csv  test.txt
communication/I2V/result/coding_data/coding_ourcode_10_2/: result.csv  test.txt
communication/I2V/result/coding_data/coding_ourcode_20/: result.csv  test.txt
communication/I2V/result/coding_data/test/: result.csv
communication/I2V/result/result_coding/: our_10.csv  our_20.csv  our_30.csv  ourcode_10.csv  ourcode_20.csv  ourcode_30.csv
communication/I2V/src/: FiniteField.cpp  LDPC.cpp  v2x_receiver.cpp  v2x_sender.cpp  v2x_socket.cpp
(+174 files in other folders)
